<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="a.easypark4.LoginActivity">

    <TextView
        android:text="@string/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/app_name"
        android:textSize="30sp"
        android:textStyle="normal|bold"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="78dp" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="57dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <EditText
            android:id="@+id/txtLoginEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#eef7ff"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:layout_marginBottom="24dp"
            android:textColor="#456"
            android:textColorHint="#93a0ac"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:singleLine="false" />

        <EditText
            android:id="@+id/txtLoginPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#eef7ff"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColor="#456"
            android:textColorHint="#93a0ac"
            android:layout_marginBottom="24dp"
            android:layout_above="@+id/btnLogin"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/cast_libraries_material_featurehighlight_outer_highlight_default_color"
            android:text="@string/btn_login"
            android:textColor="#fff"
            android:layout_above="@+id/btnSwtichRegister"
            android:layout_centerHorizontal="true" />

        <Button
            android:text="@string/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnSwtichRegister"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true" />
    </LinearLayout>

</RelativeLayout>
