<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="a.easypark4.RegisterActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_marginTop="65dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <EditText
            android:id="@+id/txtRegisterFirstname"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="#eef7ff"
            android:hint="First name"
            android:padding="10dp"
            android:inputType="textCapWords"
            android:textColor="#456"
            android:textColorHint="#93a0ac" />

        <EditText
            android:id="@+id/txtRegisterName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="#eef7ff"
            android:hint="@string/hint_nom"
            android:padding="10dp"
            android:inputType="textCapWords"
            android:textColor="#456"
            android:textColorHint="#93a0ac" />

        <EditText
            android:id="@+id/txtRegisterEmail"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="#eef7ff"
            android:hint="@string/hint_email"
            android:padding="10dp"
            android:inputType="textCapWords"
            android:textColor="#456"
            android:textColorHint="#93a0ac" />

        <EditText
            android:id="@+id/txtRegisterPassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="#eef7ff"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColor="#456"
            android:textColorHint="#93a0ac" />
        <!-- Login Button -->

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@color/cast_libraries_material_featurehighlight_outer_highlight_default_color"
            android:text="REGISTER"
            android:textColor="#fff" />

        <Button
            android:text="@string/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnSwitchLogin"
            style="@style/Widget.AppCompat.Button.Borderless" />
        <!-- Link to Login Screen -->

    </LinearLayout>

</RelativeLayout>
